css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* General Styles */
html {
  font-size: 16px;
} 

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 1em;
  text-align: left;
  color: #e2e3e6;
}

ul,
ol {
  list-style-type: none;
}

a {
  color: #e2e3e6;
  text-decoration: none;
}

h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.875em;
  font-weight: 500;
}

h3,
h4 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.125em;
  font-weight: 500;
  margin: 20px 0;
}

p {
  font-size: 0.875em;
  line-height: 1.285;
}

img {
  width: 100%;
}

figure {
  margin: 0;
}

address {
  font-style: normal;
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}
  
/* -------------------- Base Header - Footer Styles -----------------*/

header,
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #202322;
}


/* Header */

header {
  padding: 15px 0;
}

header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;
}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.header-divider {
  background: #3a3a3a;
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;
} 

header nav {
  width: 60%; /* 220px divide by total 360px */
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: row wrap;
}

header nav ul {
  display: flex;
  justify-content: space-around;
  width: 100%;
  padding-inline-start: initial;
}

header nav ul li {
  font-size: 1.125em;
}

/* Footer */

footer {
  flex-direction: column;
  text-align: center;
}

footer .content-wrapper {
  width: 55%; /* 200px divide by total 360px*/
  margin: 50px 0;
}

footer p {
  margin: 0;
}

footer .contact {
  margin-bottom: 45px; /* they have 50px*/
}

footer .social-icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

footer .social-icons p {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #527158;
  border-radius: 50%;
  height: 40px;
  width: 40px;
}

footer .social-icons p i {
  font-size: 1.3125em;
}

footer .copyright {
  margin: 20px 0; 
}

/* -------------------- Mobile Styles - Homepage  -----------------*/

/* Hero Area */
 
.hero-area {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../img/header-img.jpg') center no-repeat #333;
  background-size: cover;
  min-height: 500px;
}

.hero-area h1 {
  font-family: 'Poppins', sans-serif;
  font-size: 2.25em;
  font-weight: 500;
  line-height: 1.2; /* how do you calculate this? */
}


/* Aside */

aside {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #527158;
}

aside .form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #a7a8ae;
  font-style: italic;
  padding: 1em;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3e6;
  border: none;
  text-align: center;
  text-transform: uppercase;
}


/* Features */

.features {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../img/background-img.jpg') center no-repeat #333;
  background-size: cover;
}

.features h2 {
  margin-bottom: 60px;
}

.features .features-items {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.features article {
  width: 63%;
  margin: 30px 0;
}

.features p {
  margin: 0;
  text-align: center;
}

.features i {
  font-size: 3.75em;
  margin-bottom: 40px;
}


/* Reviews */

.reviews { 
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background-color: #2a423a;
}

.reviews h2 {
  margin-bottom: 30px;
  line-height: 1; /* how do you calculate this? */
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
}
/* ... */

